TEST_PROGRAMS/VALID/05/2d_array_var_dec.go
/* 2D array variable declaration. */

package main

var m [14][33] int

func main() {
	// Do nothing.
}
